[gd_scene load_steps=9 format=3 uid="uid://dc72mvnkquq5b"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_6w3rr"]
[ext_resource type="Shader" path="res://assets/shader/start_screen.gdshader" id="1_cbiy1"]
[ext_resource type="Texture2D" uid="uid://w0rqp86whhnx" path="res://assets/sprites/back.png" id="2_jycaa"]
[ext_resource type="FontFile" uid="uid://bya20bd0ol5c1" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_d066e"]
[ext_resource type="Script" path="res://scripts/panel.gd" id="3_lv4nx"]
[ext_resource type="FontFile" uid="uid://lrf64dpg6qa5" path="res://assets/fonts/PixelOperator8.ttf" id="5_h0quh"]
[ext_resource type="Theme" uid="uid://cnnrcqluok6ds" path="res://assets/themes/basic_button.tres" id="6_b0c2g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ikc3"]
shader = ExtResource("1_cbiy1")
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scroll_texture = ExtResource("2_jycaa")

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6w3rr")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_6ikc3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_lv4nx")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -271.0
offset_right = 350.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -369.0
offset_top = 79.0
offset_right = 379.0
offset_bottom = 111.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_d066e")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -131.0
offset_right = 324.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_b0c2g")
theme_override_constants/separation = 8

[node name="AudioSettings" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d066e")
theme_override_font_sizes/font_size = 16
text = "Audio"
horizontal_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="Panel/VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "Master Volume "

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
value = 100.0

[node name="MusicVolume" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="Panel/VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "Music Volume "

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
value = 100.0

[node name="SFXVolume" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="Panel/VBoxContainer/SFXVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
value = 100.0

[node name="MuteUnfocussed" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MuteUnfocussedLabel" type="Label" parent="Panel/VBoxContainer/MuteUnfocussed"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "Mute when unfocussed"

[node name="MuteFocusCheckBox" type="CheckBox" parent="Panel/VBoxContainer/MuteUnfocussed"]
layout_mode = 2
size_flags_horizontal = 10

[node name="DisplaySettings" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_d066e")
theme_override_font_sizes/font_size = 16
text = "Display"
horizontal_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "Fullscreen
"

[node name="FullscreenCheckBox" type="CheckBox" parent="Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Resolution" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Panel/VBoxContainer/Resolution"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "Resolution
"

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16

[node name="UIScaler" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="UIScalerLabel" type="Label" parent="Panel/VBoxContainer/UIScaler"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_h0quh")
theme_override_font_sizes/font_size = 16
text = "UI Size
"

[node name="UIScaleSlider" type="HSlider" parent="Panel/VBoxContainer/UIScaler"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
value = 100.0

[node name="NavigationButtons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ButtonReset" type="Button" parent="Panel/VBoxContainer/NavigationButtons"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("6_b0c2g")
text = "Reset
"

[node name="ButtonApply" type="Button" parent="Panel/VBoxContainer/NavigationButtons"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("6_b0c2g")
text = "Apply"

[node name="ButtonBack" type="Button" parent="Panel/VBoxContainer/NavigationButtons"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("6_b0c2g")
text = "Back"

[connection signal="value_changed" from="Panel/VBoxContainer/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/MuteUnfocussed/MuteFocusCheckBox" to="." method="_on_mute_focus_box_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Fullscreen/FullscreenCheckBox" to="." method="_on_fullscreen_box_toggled"]
[connection signal="value_changed" from="Panel/VBoxContainer/UIScaler/UIScaleSlider" to="." method="_on_ui_scale_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/NavigationButtons/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/NavigationButtons/ButtonApply" to="." method="_on_button_apply_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/NavigationButtons/ButtonBack" to="." method="_on_button_back_pressed"]
